--- a/index.html
+++ b/index.html
@@ -235,12 +235,178 @@ https://templatemo.com/tm-518-sentra
                 <div class="tabs-content">
                     <div class="wrapper">
                         <ul class="tabs clearfix" data-tabgroup="first-tab-group">
-                            <li><a href="#tab5" class="active">21 Qua</a></li>
+                            <li><a href="#tab4" class="active">22 Qui</a></li>
+                            <li><a href="#tab5">21 Qua</a></li>
                             <li><a href="#tab6">20 Ter</a></li>
                             <li><a href="#tab7">19 Seg</a></li>
                             <li><a href="#tab8">18 Dom</a></li>
                         </ul>
                         <section id="first-tab-group" class="tabgroup">
+                            <div id="tab4">
+                                <ul>
+                                    <li>
+                                        <div class="item">
+                                            <img src="img/ponto/29-banjo-kazzoie.png" alt="" width="306" height="230">
+                                            <div class="text-content">
+                                                <h4>Bajo-Kazzoie</h4>
+                                                <span>+1 Dida</span>
+                                                <p><strong>Qual é o nome deste jogo?</strong>
+                                                    <br />
+                                                    Banjo-Kazooie é uma série de videogames desenvolvida pela Rare. Os
+                                                    jogos apresentam um urso macho chamado Banjo e seu amigo, uma grande
+                                                    ave vermelha fêmea chamada Kazooie, que são controlados pelo
+                                                    jogador.
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="item">
+                                            <img src="img/ponto/30-turok.jpg" alt="" width="306" height="230">
+                                            <div class="text-content">
+                                                <h4>Turok</h4>
+                                                <span>+1 Camilo +1 Ambrósio</span>
+                                                <p><strong>Qual é o nome deste jogo?</strong>
+                                                    <br />
+                                                    Turok é uma série de videogames de tiro em primeira pessoa baseados
+                                                    no personagem de quadrinhos de mesmo nome. É ambientado em um mundo
+                                                    primitivo habitado por dinossauros e outras criaturas.
+                                                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="item">
+                                            <video width="306" height="230" controls>
+                                                <source src="img/ponto/31-sunset-riders.mp4" type="video/mp4">
+                                                Seu navegador não suporta a tag video.
+                                            </video>
+                                            <div class="text-content">
+                                                <h4>Sunset Riders</h4>
+                                                <span>+1 Hrone</span>
+                                                <p><strong>Este som pertence a qual jogo?</strong>
+                                                    <br />
+                                                    Sunset Riders é um jogo de faroeste, no estilo plataforma 2D,
+                                                    desenvolvido pela Konami em 1991 para arcade. Posteriormente em 1992
+                                                    e 1993 foi portado para os consoles Mega Drive e Super Nintendo,
+                                                    respectivamente.
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="item">
+                                            <img src="img/ponto/32-007-contra-goldeneye.jpg" alt="" width="306"
+                                                height="230">
+                                            <div class="text-content">
+                                                <h4>GoldenEye 007</h4>
+                                                <span>+1 Hrone</span>
+                                                <p><strong>Qual é o nome deste jogo?</strong>
+                                                    <br />
+                                                    GoldenEye 007 é um jogo eletrônico de tiro em primeira pessoa
+                                                    desenvolvido pela Rare e publicado pela Nintendo para o Nintendo 64.
+                                                    Baseado no filme homônimo de 1995, o jogo baseia-se primariamente em
+                                                    uma campanha para um jogador, da qual os jogadores assumem o papel
+                                                    do agente James Bond, do Serviço Britânico de Inteligência Secreta,
+                                                    em sua missão de evitar que um sindicato criminoso utilize uma arma
+                                                    espacial contra Londres para causar um colapso financeiro global.
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="item">
+                                            <img src="img/ponto/zenith.jpg" alt="" width="306" height="230">
+                                            <div class="text-content">
+                                                <h4>TV Zenith</h4>
+                                                <span>+1 Renato <strong>(Casco Azul)</strong> </span>
+                                                <p><strong>Na Doom Games existiam duas TVs iguais a esta. Qual era a
+                                                        marca da TV?</strong>
+                                                    <br />
+                                                    Na Doom Games existiam duas TVs da marca Zenith. Elas precisavam
+                                                    ficar distantes uma da outra para que ao colocar o timer em uma, o
+                                                    sinal do controle remoto não mudasse o timer da outra.
+                                                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="item">
+                                            <img src="img/ponto/33-legacy-of-kain-soul-reaver.jpg" alt="" width="306"
+                                                height="230">
+                                            <div class="text-content">
+                                                <h4>Legacy of Kain: Soul Reaver</h4>
+                                                <span>+1 Renato</span>
+                                                <p><strong>Qual o nome deste jogo?</strong>
+                                                    <br />
+                                                    É um jogo eletrônico de ação-aventura com perspectiva em terceira
+                                                    pessoa criado pela Crystal Dynamics e publicado pela Eidos
+                                                    Interactive. O jogo foi lançado no dia 16 de agosto de 1999 para
+                                                    PlayStation e sistemas Microsoft Windows e em 27 de janeiro de 2000
+                                                    para Sega Dreamcast. É o segundo jogo lançado na série Legacy of
+                                                    Kain, procedendo Blood Omen: Legacy of Kain. Foi sucedido por outros
+                                                    três jogos, sendo que um deles, Legacy of Kain: Soul Reaver 2, é uma
+                                                    sequência direta.
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="item">
+                                            <img src="img/ponto/34-spyro-dragon.jpg" alt="" width="306" height="230">
+                                            <div class="text-content">
+                                                <h4>Spyro the Dragon</h4>
+                                                <span>+1 Camilo</span>
+                                                <p><strong>Qual o nome deste jogo?</strong>
+                                                    <br />
+                                                    Spyro the Dragon é um jogo eletrônico de plataforma lançado pela
+                                                    Insomniac Games para PlayStation em setembro de 1998. Este jogo
+                                                    marca a estreia do personagem Spyro e o primeiro da série de jogos
+                                                    Spyro. Ele narra as aventuras de um pequeno dragão chamado Spyro e o
+                                                    seu amigo libélula Sparx.
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="item">
+                                            <img src="img/ponto/35-brave-fence-musashi.png" alt="" width="306"
+                                                height="230">
+                                            <div class="text-content">
+                                                <h4>Brave Fencer Musashi</h4>
+                                                <span>+1 Ambrósio</span>
+                                                <p><strong>Qual o nome deste jogo?</strong>
+                                                    <br />
+                                                    É um jogo eletrônico do gênero RPG/ação desenvolvido e lançado pela
+                                                    Square (atualmente Square Enix) em 1998 para o Sony PlayStation. O
+                                                    jogo apresenta combate em tempo real num ambiente 3D, contando com
+                                                    dublagens na maioria dos diálogos. A trilha sonora de Brave Fencer
+                                                    Musashi foi composta por Tsuyoshi Sekito, ex-funcionário da Konami.
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="item">
+                                            <img src="img/ponto/36-Aladin.jpg" alt="" width="306" height="230">
+                                            <div class="text-content">
+                                                <h4>Disney's Aladdin</h4>
+                                                <span>+ Hrone +1 Ambrósio</span>
+                                                <p><strong>Qual o nome deste jogo?</strong>
+                                                    <br />
+                                                    O Disney's Aladdin é um jogo de plataforma baseado no filme de 1992
+                                                    do mesmo nome, desenvolvido pela Virgin Games USA. O jogo foi
+                                                    lançado pela Sega para o Sega Genesis em 11 de novembro de 1993 como
+                                                    um dos vários jogos baseados no filme, incluindo outro jogo lançado
+                                                    no mesmo mês pela Capcom para o Super NES.
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </div>
                             <div id="tab5">
                                 <ul>
                                     <li>
