--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ https://templatemo.com/tm-518-sentra
 
     <div class="sidebar-navigation hidde-sm hidden-xs">
         <div class="logo">
-            <a href="#">C<em>O</em>D<em>G</em></a>
+            <a href="#">Doom <em>Games</em></a>
         </div>
         <nav>
             <ul>
