Correção Casco Dida

--- a/index.html
+++ b/index.html
@@ -1227,7 +1227,7 @@ https://templatemo.com/tm-518-sentra
                         </div>
                         <div class="text-content">
                             <h4>Dida</h4>
-                            <span>Vulputate</span>
+                            <span>+1 ponto -1 ponto</span>
                             <p>Aquele que acertar a pergunta poderá transferir 1 ponto de outro participante para a sua
                                 própria pontuação.</p>
                         </div>
